--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start",
     "lint": "eslint"
   },
+  "packageManager": "pnpm@10.23.0",
   "dependencies": {
-    "next": "16.0.4",
+    "clsx": "^2.1.1",
+    "next": "^14.2.5",
     "nextra": "^4.6.0",
     "nextra-theme-docs": "^4.6.0",
     "react": "19.2.0",
