--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "start": "next start",
     "lint": "eslint"
   },
-  "packageManager": "pnpm@10.23.0",
   "dependencies": {
-    "clsx": "^2.1.1",
-    "next": "^14.2.5",
+    "next": "16.0.4",
     "nextra": "^4.6.0",
     "nextra-theme-docs": "^4.6.0",
     "react": "19.2.0",
